fix: improve cards' layout on small devices

--- a/_sass/3-sections/_footer.sass
+++ b/_sass/3-sections/_footer.sass
@@ -23,3 +23,14 @@ footer
             weight: 700
           &:hover
             color: $accent-color
+
+@media (max-width: 768px)
+  footer
+    display: flex
+    height: fit-content
+    margin: 0 auto 3rem auto
+    width: fit-content
+  .footer-wrap
+    display: flex
+    justify-content: center
+    align-items: center
