--- a/assets/css/mermaid.css
+++ b/assets/css/mermaid.css
@@ -86,3 +86,9 @@
 .mermaid-footer .number {
     color: #5f5f5f
 }
+
+@media screen and (max-width: 768px) {
+    .mermaid-container {
+        margin: auto;
+    }
+}
